src/aux-server/aux-web/aux-projector/FileSearch/FileSearch.css
.file-search {
    display: flex;
    align-items: center;
    width: 100%;
}

.file-search:not(.open) {
    justify-content: flex-end;
}

.num-files {
    background-color: #999;
    color: #fff;
}

.mini-file-cube {
    height: 20px;
    width: 20px;
}

.search-count {
    width: 40px;
}

svg {
    width: 30px;
    height: 30px;
    padding: 5px 0px 0px 3px;
}

.testThis {
    position: absolute;
    display: -webkit-box;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center;
    bottom: 8px;
    right: 6px;
    font-size: 10px;
    font-style: normal;
    width: 22px;
    height: 22px;
    border-radius: 50%;
    pointer-events: none;
    z-index: 6;
    background-color: #999;
    color: #fff;
}

.md-badge {
    color: var(--md-theme-default-text-primary-on-accent, #fff);
    fill: var(--md-theme-default-text-primary-on-accent, #fff);
}

.md-toolbar .file-search .md-field {
    margin-top: 0;
    margin-bottom: 8px;
}

